--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node modules/dist/css/bootstrap.css"
             ],
             "scripts": []
           },
@@ -87,7 +87,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node modules/dist/css/bootstrap.css"
             ],
             "scripts": []
           }
