--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "node modules/dist/css/bootstrap.css"
+            "styles": [ "src/styles.css",
+              "node_modules/dist/css/bootstrap.css"
             ],
             "scripts": []
           },
@@ -86,8 +86,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "node modules/dist/css/bootstrap.css"
+            "styles": [ "src/styles.css",
+              "node_modules/dist/css/bootstrap.css"
             ],
             "scripts": []
           }
